--- a/app/src/main/res/layout/holder_all_categories_item.xml
+++ b/app/src/main/res/layout/holder_all_categories_item.xml
@@ -16,7 +16,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_5"
+        android:layout_marginBottom="@dimen/dimen_5"
+        android:layout_marginStart="@dimen/dimen_5"
+        android:layout_marginEnd="@dimen/dimen_5"
         android:background="@color/white"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
         android:tag="@{model}">
