--- a/app/src/main/res/layout/holder_lesson_item.xml
+++ b/app/src/main/res/layout/holder_lesson_item.xml
@@ -4,31 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="model"
             type="com.stathis.unipiapp.models.Lesson" />
     </data>
 
     <androidx.cardview.widget.CardView
+        style="@style/unipi_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/unipi_card"
         android:tag="@{model}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/dimen_10">
+            android:layout_height="match_parent">
+
+            <View
+                android:id="@+id/lesson_ribbon"
+                mandatoryColor="@{model.mandatory}"
+                android:layout_width="@dimen/dimen_5"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/lesson_title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:background="@color/unipi_red" />
 
             <TextView
                 android:id="@+id/lesson_title"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_10"
                 android:text="@{model.title}"
                 android:textColor="@color/unipi_blue"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/lesson_ribbon"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/app_name" />
 
