--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_home"
         android:title="@string/menu_main" />
 
+    <item android:id="@+id/nav_syllabus"
+        android:icon="@drawable/ic_book_nav"
+        android:title="@string/nav_syllabus" />
+
     <item android:id="@+id/nav_lessons"
         android:icon="@drawable/ic_book"
         android:title="@string/eclass" />
