--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,105 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.UnipiApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.UnipiApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/unipi_blue</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/unipi_red</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/unipi_red</item>
+
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/unipi_red</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="unipi_fab_btn" parent="ShapeAppearanceOverlay.Material3.FloatingActionButton">
+        <item name="tint">@null</item>
+        <item name="android:focusable">true</item>
+        <item name="android:layout_margin">@dimen/dimen_16</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <!-- Holder Styles -->
+    <style name="unipi_card" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">@dimen/dimen_5</item>
+        <item name="android:layout_marginTop">@dimen/dimen_10</item>
+        <item name="android:layout_marginStart">@dimen/dimen_10</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_10</item>
+    </style>
+
+    <style name="unipi_lesson_card" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">@dimen/dimen_5</item>
+        <item name="android:layout_marginBottom">@dimen/dimen_10</item>
+        <item name="android:layout_marginStart">@dimen/dimen_10</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_10</item>
+    </style>
+
+    <style name="holder_programmes_style">
+        <item name="android:layout_marginTop">@dimen/dimen_5</item>
+        <item name="android:layout_marginBottom">@dimen/dimen_5</item>
+        <item name="android:layout_marginStart">@dimen/dimen_10</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_10</item>
+    </style>
+
+    <style name="VerticalRecyclerView">
+        <item name="layoutManager">androidx.recyclerview.widget.LinearLayoutManager</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="text_20_white_bold" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_18_blue_bold" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/unipi_blue</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_18_white" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="text_18_black" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="text_16_blue_bold" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/unipi_blue</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_16_white_bold" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_16_black" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="text_14_blue_highlight" parent="Widget.AppCompat.TextView">
+        <item name="android:background">@color/unipi_blue</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">@dimen/dimen_10</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="normal_text_blue" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/unipi_blue</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
