--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.UnipiApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.UnipiApp" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/unipi_blue</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -9,6 +9,8 @@
         <item name="colorSecondary">@color/unipi_red</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/unipi_red</item>
